feat: #144 레코드 데이터 계보(Data Lineage) 전 구간 5단계 파이프라인 시각화 및 이상 노드 감지 개발
- 원천 소스(Source) -> 수집(Inbound) -> 골든 마스터(Master) -> 전파(Outbound) -> 소비자(Consumer) 5단계 계보 모델링
- 단계별 SpEL 필드 변환 매핑 규칙(mappingRules: sourceExpression -> targetField) 파싱 및 제공
- IntegrationLog 연계 채널별 소비 통계(channelConsumption: 총 전송/성공/실패/최근 일시/지연시간) 집계
- 이상/지연 노드 자율 판정 및 경고 사유(healthStatus: HEALTHY, WARNING, ERROR, anomalyReason) 제공
- 프론트엔드 DataLineageModal 5단계 가로형 플로우 Stepper 및 노드 상세 검사 패널 구현
- raw UUID 표기 제한 및 REC- / CHN- 표준 식별 코드 적용
- 백엔드 JUnit / 프론트엔드 Vitest 단위 테스트 100% 검증 및 k8s 배포 (백엔드 v1.2.42, 프론트엔드 v1.5.70)